# ESP32-ICM426XX-driver

./: .gitignore  CMakeLists.txt  README.md  projectInit.bat  sdkconfig  sdkconfig.old  workspace.code-workspace
components/GFX/: CMakeLists.txt  Kconfig  cubeGFX.c  i2s_parallel.c  leddisplay.c  val2pwm.c
components/I2Cdev/: CMakeLists.txt  I2Cdev.c  Kconfig
components/ICM42605/: CMakeLists.txt  ICM42605.c  Kconfig
components/ICM42605/Invn/Drivers/Ak0991x/: Ak0991x.c  Ak0991x.h  Ak0991xSerif.h
components/ICM42605/Invn/Drivers/Icm426xx/: Icm426xxDefs.h  Icm426xxDriver_HL.c  Icm426xxDriver_HL.h  Icm426xxDriver_HL_apex.c  Icm426xxDriver_HL_apex.h  Icm426xxExtFunc.h  Icm426xxSelfTest.c  Icm426xxSelfTest.h  Icm426xxTransport.c  Icm426xxTransport.h
components/ICM42605/Invn/Helpers/Icm426xx/: helperClockCalib.c  helperClockCalib.h
components/ICM42605/Invn/LibAGM/: invn_algo_agm.h
components/ICM42605/Invn/LibAGM/invn/common/: invn_types.h
components/ICM42605/include/: ICM42605.h
components/ICM426XX/: CMakeLists.txt  ICM426XX.c  Kconfig
components/ICM426XX/Invn/: invn_types.h
components/ICM426XX/Invn/Drivers/Ak0991x/: Ak0991x.c  Ak0991x.h  Ak0991xSerif.h
components/ICM426XX/Invn/Drivers/Icm426xx/: Icm426xxDefs.h  Icm426xxDriver_HL.c  Icm426xxDriver_HL.h  Icm426xxDriver_HL_apex.c  Icm426xxDriver_HL_apex.h  Icm426xxSelfTest.c  Icm426xxSelfTest.h  Icm426xxTransport.c  Icm426xxTransport.h  Icm426xxVersion.h
components/ICM426XX/Invn/EmbUtils/: Message.h
components/ICM426XX/Invn/Helpers/Icm426xx/: helperClockCalib.c  helperClockCalib.h
components/ICM426XX/Invn/LibAGM/: invn_algo_agm.h
components/ICM426XX/include/: ICM426XX.h  logmacro.h  malloc_local.h
components/MPU6050_lite/: CMakeLists.txt  MPU6050_lite.c
components/configwrapper/: CMakeLists.txt
components/duktape/: CMakeLists.txt
components/jsfileio/: CMakeLists.txt
components/server/: CMakeLists.txt
components/server/http_content/: data.html  log.css  log.js  log_file.html  log_file.js
components/server/interface/: fs_json.h  server.h  wifilog.h
components/server/src/: fs_json.c  server.c  wifilog.c
components/sntp/: CMakeLists.txt  Kconfig
filesystem/: accelgyro_test.js  clock.js  configuration.json  cucli.txt  fibonacci.js  filetest.js  index.js  snake.js  timer-test.js
main/: CMakeLists.txt  button.c  duk_console.c  dukf_utils.c  duktape_utils.c  fileio.c  main.c  module_GFX.c  module_cubeos.c  module_motion.c  wifi_sta.c
main/include/: button.h  dukf_utils.h  duktape_utils.h  module_GFX.h  module_cubeos.h  module_motion.h  wifi_sta.h
partitions/: partitions copy.csv  partitions.csv
(+132 files in other folders)
